concordium-std/tests/derive-schema-type/fail-tag-without-repr.stderr
error: 'repr(..)' attribute must be set on the type when using 'tag' attribute
 --> tests/derive-schema-type/fail-tag-without-repr.rs:5:10
  |
5 | #[derive(SchemaType)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SchemaType` (in Nightly builds, run with -Z macro-backtrace for more info)
